# engr140projects

./: .gitignore
final-project/: CMakeLists.txt
final-project-triage/: app_main.cpp  app_window.cpp  app_window.h  app_window.mm  enemy.cpp  enemy.hpp  glut_window.cpp  glut_window.h  makefile
final-project/content/: manifest.json
final-project/content/meshes/robot02/: robot02.lod0.mesh.json.z  robot02.lod1.mesh.json.z
final-project/content/shaders/: model_fs.glsl  model_vs.glsl  tonemap_fs.glsl
final-project/content/textures/: copyright_notice.txt
final-project/include/project/: animation.hpp  animationclip.hpp  animationsource.hpp  animationtransition.hpp  application.hpp  cameraparameters.hpp  common.hpp  cubemap.hpp  material.hpp  mesh.hpp  model.hpp  modelgroup.hpp  modelinstance.hpp  node.hpp  persistentbuffer.hpp  program.hpp  renderpipeline.hpp  resources.hpp  semaphore.hpp  shader.hpp  texture.hpp  timerstack.hpp  transform.hpp  vertexattributes.hpp
final-project/include/project/objects/: glcube.hpp  glfullscreenquad.hpp  glline.hpp  globject.hpp  glsphere.hpp
final-project/src/: animation.cpp  animationclip.cpp  animationsource.cpp  animationtransition.cpp  application.cpp  cameraparameters.cpp  cubemap.cpp  lodepng.cpp  main.cpp  material.cpp  mesh.cpp  model.cpp  modelgroup.cpp  modelinstance.cpp  node.cpp  program.cpp  renderpipeline.cpp  resources.cpp  shader.cpp  texture.cpp  timerstack.cpp  transform.cpp  vertexattributes.cpp
final-project/src/objects/: glcube.cpp  glfullscreenquad.cpp  glline.cpp  globject.cpp  glsphere.cpp
lab01/: a.out  exercise2.cpp  exercise3.cpp  exercise5.cpp
lab02/: a.out  exercise1.cpp  exercise1.cpp~  exercise2.cpp  exercise3.cpp  exercise4.cpp  exercise4.cpp~  exercise5.cpp  exercise5.cpp~  exercise6.cpp  exercise6.cpp~
lab03/: a.out  exercise1.cpp  exercise2.cpp  exercise3.cpp  exercise4.cpp  exercise5.cpp  exercise6.cpp
lab04/: AddressBook.h  Entry.h  LinkedList.h  Stack.h  Stash.h  a.out  exercise1.cpp  exercise2.cpp  exercise7.cpp  exercise8.cpp
lab05/: Animal.h  Circle.h  Dog.h  Stack.h  a.out  exercise3.cpp
lab06/: Rect.h  Vec.h  a.out  exercise3.cpp  exercise3.cpp~
lab07/: Animal.h  Cat.h  Header.h  Object.h  objects.cpp  refs.h
miniproject01/: Rect.cpp  Rect.h  RectStash.h  Vec.h  app_main.cpp  app_window.cpp  app_window.h
miniproject02/: Color.h  GrRect.cpp  GrRect.h  Rect.cpp  Rect.h  Vec.h  app_window.cpp  app_window.h  glut_window.h
miniproject03/: GrPlot.cpp  GrPlot.h  GrRect.cpp  GrRect.h  Rect.h  Vec.cpp  Vec.h  app_main.cpp  app_window.cpp  app_window.h  glut_window.h  makefile
miniproject04/: GrClock.cpp  GrClock.h  GrPlot.cpp  GrPlot.h  GrRect.h  GrResizableRect.cpp  GrResizableRect.h  Rect.cpp  Time.h  Vec.cpp  Vec.h  app_main.cpp  app_window.cpp  (+3 more)
(+67 files in other folders)
